|
Quick Lists
|
|
Bug ID:
|
6781583
|
|
Votes
|
0
|
|
Synopsis
|
Hotspot build fails on linux 64 bit platform with gcc 4.3.2
|
|
Category
|
hotspot:other
|
|
Reported Against
|
b07
|
|
Release Fixed
|
hs15(b01),
7(b47) (Bug ID:2173038)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
|
|
Submit Date
|
05-DEC-2008
|
|
Description
|
Due to more restrictions to type cast in GCC 4.3.2, the hotspot build failed on 64 bit linux platforms such as Fedora 10, Ubuntu 8.10 or openSuSE 11. We need to address this so that the open jdk community can pick up the hotspot source and successfully build on these latest linux platforms.
Posted Date : 2008-12-05 18:56:54.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
The fix is to remove the wrong casts especially in the context of 64 bit.
Posted Date : 2008-12-05 18:59:47.0
http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/2328d1d3f8cf
Posted Date : 2008-12-25 06:16:21.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |