6781583: Hotspot build fails on linux 64 bit platform with gcc 4.3.2

Fixed the wrong cast between types since more restrictions are imposed by gcc 4.3.2

Reviewed-by: jcoomes, acorn, phh, never